<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layout_marginStart="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:id="@+id/popular_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/popular_yogas_text"
            android:foreground="?android:attr/selectableItemBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/yoga" />

        <ImageView
            android:id="@+id/img_gradient"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/gradient_text"
            android:src="@drawable/image_btm_overlay" />

        <TextView
            android:id="@+id/popular_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp"
            android:text="@string/sample_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <!--        <TextView-->
        <!--            android:id="@+id/popular_dist"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="50 mins"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:layout_gravity="bottom"-->
        <!--            android:maxLength="7"-->
        <!--            android:layout_marginStart="15dp"-->
        <!--            android:layout_marginBottom="4dp"/>-->

    </androidx.cardview.widget.CardView>


</LinearLayout>