<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/net"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/errorImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_signal_wifi_connected_no_internet_4_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNetworkError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Network Error"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please Check your Internet Connection"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNetworkError" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_back_btn"
            android:contentDescription="@string/menu_text"
            android:src="@drawable/menu_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#3F51B5" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="Hello "
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu" />

        <TextView
            android:id="@+id/fitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness_enthusiast_text"
            android:textColor="#3F51B5"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/hello"
            app:layout_constraintTop_toBottomOf="@id/menu"
            app:layout_constraintTop_toTopOf="@id/hello" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/what_yoga_practice_are_you_in_the_mood_for_today_text"
            android:textColor="#888484"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello"
            tools:ignore="TextSizeCheck" />


        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/searchview"
            android:focusable="false"
            android:hint="@string/search_yoga_text"
            android:importantForAutofill="no"
            android:inputType="none"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />


        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:text="@string/categories_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search" />

        <HorizontalScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="17dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories"
            tools:ignore="RtlSymmetry">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="52dp">


                    <ImageView
                        android:id="@+id/category_img1"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:contentDescription="@string/categories_text"
                        android:scaleType="centerCrop"
                        android:src="@drawable/yoga_img" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card1"
                    android:layout_alignStart="@id/card1"
                    android:layout_alignEnd="@id/card1"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/yoga_text"
                    android:textColor="#888484"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@id/card1"
                    app:cardCornerRadius="52dp">


                    <ImageView
                        android:id="@+id/category_img2"
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:contentDescription="@string/categories_text"
                        android:scaleType="centerCrop"
                        android:src="@drawable/yoga_diet" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card2"
                    android:layout_alignStart="@id/card2"
                    android:layout_alignEnd="@id/card2"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/diet_text"
                    android:textColor="#888484"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>


        </HorizontalScrollView>

        <TextView
            android:id="@+id/popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/popular_yogas_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_popular"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular"
            app:layout_goneMarginTop="15dp"
            tools:listitem="@layout/popular_rv_items" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2095090407853200/7141180659"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>