<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_fitness_scene"
    tools:context=".FitnessActivity">

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/magnify"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/card_back_btn"
        android:clickable="true"
        android:contentDescription="@string/zoom_text"
        android:hapticFeedbackEnabled="true"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/web_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/full_size_ic"
        tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_back_btn"
        android:clickable="true"
        android:contentDescription="@string/back_text"
        android:foregroundGravity="center"
        android:hapticFeedbackEnabled="true"
        android:padding="4dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/card_fitness"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/web_view">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="62dp"
            android:text="@string/sample_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/about_btn"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_layout"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/about_text"
            app:layout_constraintStart_toStartOf="@id/heading"
            app:layout_constraintTop_toBottomOf="@id/heading"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ScrollView
            android:id="@+id/about_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_btn">

            <TextView

                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp" />

        </ScrollView>

        <Button
            android:id="@+id/steps_btn"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_layout"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/steps_text"
            app:layout_constraintStart_toEndOf="@id/about_btn"
            app:layout_constraintTop_toBottomOf="@id/heading"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ScrollView
            android:id="@+id/steps_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/steps_btn">

            <TextView

                android:id="@+id/steps_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="16sp" />

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2095090407853200/7141180659" />

</androidx.constraintlayout.motion.widget.MotionLayout>